--- a/ALGORYTHM/requirements.txt
+++ b/ALGORYTHM/requirements.txt
@@ -1,10 +1,15 @@
-numpy==2.2.2
-pandas==2.2.3
-psycopg2-binary==2.9.10
-python-dateutil==2.9.0.post0
-pytz==2025.1
-PyYAML==6.0.2
-six==1.17.0
-SQLAlchemy==2.0.37
-typing_extensions==4.12.2
-tzdata==2025.1
+numpy
+pandas
+python-dateutil
+pytz
+PyYAML
+six
+SQLAlchemy
+typing_extensions
+tzdata
+dash
+dash-bootstrap-components
+pg8000
+cloud-sql-python-connector
+reportlab
+python-dotenv
