--- a/fastapi_migration/backend/Dockerfile
+++ b/fastapi_migration/backend/Dockerfile
@@ -9,8 +9,12 @@ ENV PYTHONDONTWRITEBYTECODE=1 \
 
 # Install system dependencies
 RUN apt-get update && \
-    apt-get install -y --no-install-recommends gcc libpq-dev && \
-    apt-get clean && \
+    apt-get install -y --no-install-recommends \
+    gcc \
+    libpq-dev \
+    wkhtmltopdf \
+    build-essential \
+    && apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
 # Install Python dependencies
@@ -21,7 +25,17 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
 
 # Create necessary directories
-RUN mkdir -p /app/cache /app/reports /app/uploads
+RUN mkdir -p /app/cache /app/reports /app/uploads /app/cache/uploads
+
+# Set permissions for directories
+RUN chmod -R 777 /app/cache /app/reports /app/uploads
+
+# Expose the port
+EXPOSE 8080
+
+# Set health check
+HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
+  CMD python -c "import requests; requests.get('http://localhost:8080/api/v1/health').raise_for_status()"
 
 # Run the application
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8080"]
