--- a/fastapi_migration/frontend/nginx/nginx.conf
+++ b/fastapi_migration/frontend/nginx/nginx.conf
@@ -1,5 +1,5 @@
 server {
-    listen 80;
+    listen 8080;  # Changed from 80 to 8080 for Google Cloud Run
     server_name _;
     server_tokens off;
 
@@ -11,11 +11,16 @@ server {
     }
 
     location /api {
-        proxy_pass http://backend:8000;
+        # Updated to use the deployed backend URL instead of internal Docker service
+        proxy_pass https://zando-272043323727.us-central1.run.app;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        # Add longer timeouts for API requests
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
     }
 
     # Media: images, icons, video, audio, HTC
