--- a/fastapi_migration/database/pyproject.toml
+++ b/fastapi_migration/database/pyproject.toml
@@ -15,6 +15,8 @@ pandas = "^2.2.3"
 pydantic = "^2.11.3"
 pydantic-settings = "^2.8.1"
 pg8000 = "^1.31.2"
+pyyaml = "^6.0.2"
+fastapi = "^0.115.12"
 
 
 [build-system]
@@ -24,3 +26,4 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 gcloud-login = "scripts.gcloud_login:main"
+migrate = "db_migrations.cli:main"
