hid dashboard page. now trying to integrate google user with website user database.

--- a/zando/frontend/nginx/nginx.conf
+++ b/zando/frontend/nginx/nginx.conf
@@ -12,7 +12,7 @@ server {
 
     location /api {
         # Updated to use the deployed backend URL instead of internal Docker service
-        proxy_pass https://zando-272043323727.us-central1.run.app;
+        proxy_pass https://cosnetix-272043323727.us-central1.run.app;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
