--- a/zando/frontend/package.json
+++ b/zando/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zando-genomic-analysis",
+  "name": "cosnetix-genomic-analysis",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
