--- a/zando/frontend/public/manifest.json
+++ b/zando/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Zando Genomics",
-  "name": "Zando Genomic Analysis Platform",
+  "short_name": "Cosnetix Genomics",
+  "name": "Cosnetix Genomic Analysis Platform",
   "icons": [
     {
       "src": "favicon.ico",
